# VNTRseek

./: .gitignore  FindDeps.cmake  README.md
install/vntrseek2.0.3/: README.md  edlib-align  vntrseek.pl
install/vntrseek2.0.3/lib/: vutil.pm
perl/: pcr_dup.pl  run_proclu.pl  vutil.pm
src/newflankalign/: CMakeLists.txt
src/redund_code/: CMakeLists.txt  redund2.c
src/seqtk/: Makefile  seqtk
